# turtlebot3_behavior_demos

./: HW2_RUN_INSTRUCTIONS.md  maze_events_schema.sql  world_assets.md
install/: local_setup.sh  setup.sh
install/maze_events/lib/maze_events/: detector_node  zenoh_ingest_worker
install/maze_events/share/maze_events/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tb_autonomy/lib/tb_autonomy/: autonomy_node_cpp
install/tb_autonomy/share/ament_index/resource_index/parent_prefix_path/: tb_autonomy
install/tb_autonomy/share/tb_autonomy/: package.sh
install/tb_worlds/share/tb_worlds/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/tb_worlds/share/tb_worlds/cmake/: tb_worldsConfig-version.cmake  tb_worldsConfig.cmake
install/tb_worlds/share/tb_worlds/configs/: nav2_params.yaml  turtlebot3_bridge.yaml  turtlebot4_bridge.yaml
install/tb_worlds/share/tb_worlds/environment/: ament_prefix_path.dsv  path.dsv
install/tb_worlds/share/tb_worlds/launch/: block_spawner.launch.py  tb_demo_world.launch.py  tb_world.launch.py  turtlebot_spawner.launch.py
install/tb_worlds/share/tb_worlds/maps/: sim_house_locations.yaml  sim_house_map.pgm  sim_house_map.yaml
install/tb_worlds/share/tb_worlds/urdf/: gz_waffle.sdf.xacro
install/tb_worlds/share/tb_worlds/worlds/: sim_house.sdf.xacro
log/: latest_build
src/maze_events/: package.xml  setup.cfg  setup.py
src/maze_events/maze_events/: detector_node.py  zenoh_ingest_worker.py
(+10 files in other folders)
